Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,18 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Getting started"
+description: "Install Toolbar from the Chrome Web Store and start sharing screenshots with technical data - powered by AI."
 ---
 
-## Setting up
+### Overview
 
-Get your documentation site up and running in minutes.
+Toolbar is one browser extension for all bug reports. Capture screenshots with automatic technical context, record Loom‑style videos, push bug reports to your task manager, talk with an AI that knows the full context, see user actions, and collaborate with your team in real time.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+Join teams who spare themselves unnecessary explanations and stop leaving devs guessing.
 
-## Make it yours
+### Install Toolbar
 
-Design a docs site that looks great and empowers your users.
+1. Open the Toolbar listing on the Chrome Web Store: [Chrome Web Store — Toolbar ↗](YOUR_CHROME_WEB_STORE_URL).
+2. Click “Add to Chrome”.
+3. Pin the extension.
 
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+Tip: After installation, click the puzzle icon in Chrome, then pin Toolbar so it’s always visible.
