Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -11,8 +11,16 @@ Join teams who spare themselves unnecessary explanations and stop leaving devs g
 
 ### Install Toolbar
 
-1. Open the Toolbar listing on the Chrome Web Store: [Chrome Web Store — Toolbar ↗](YOUR_CHROME_WEB_STORE_URL).
-2. Click “Add to Chrome”.
-3. Pin the extension.
+<Steps>
+  <Step title="Search Toolbar on the Chrome Web Store" titleSize="h3">
+    Extension Link: [Chrome Web Store — Toolbar ↗](YOUR_CHROME_WEB_STORE_URL).
+  </Step>
+  <Step title="Click “Add to Chrome”." titleSize="h3">
+    Install easily on all Chromium based browsers.
+  </Step>
+  <Step title="Pin the extension." titleSize="h3">
+    Now the toolbar will always be visible and easily accessible.
+  </Step>
+</Steps>
 
 Tip: After installation, click the puzzle icon in Chrome, then pin Toolbar so it’s always visible.
