Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -3,13 +3,13 @@ title: "Getting started"
 description: "Install Toolbar from the Chrome Web Store and start sharing screenshots with technical data - powered by AI."
 ---
 
-### Overview
+## Overview
 
 Toolbar is one browser extension for all bug reports. Capture screenshots with automatic technical context, record Loom‑style videos, push bug reports to your task manager, talk with an AI that knows the full context, see user actions, and collaborate with your team in real time.
 
 Join teams who spare themselves unnecessary explanations and stop leaving devs guessing.
 
-### Install Toolbar
+## Install Toolbar
 
 <Steps>
   <Step title="Search Toolbar on the Chrome Web Store" titleSize="h3">
@@ -19,8 +19,8 @@ Join teams who spare themselves unnecessary explanations and stop leaving devs g
     Install easily on all Chromium based browsers.
   </Step>
   <Step title="Pin the extension." titleSize="h3">
-    Now the toolbar will always be visible and easily accessible.
+    After installation, click the puzzle icon in Chrome, then pin Toolbar so it’s always visible.
   </Step>
 </Steps>
 
-Tip: After installation, click the puzzle icon in Chrome, then pin Toolbar so it’s always visible.
+Now the toolbar will always be visible and easily accessible.
