Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Getting started"
 description: "Install Toolbar from the Chrome Web Store and start sharing screenshots with technical data - powered by AI."
+mode: "wide"
+sidebarTitle: "Toolbar"
 ---
 
 ## Overview
