Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Getting started"
+title: "Install Extension"
 description: "Install Toolbar from the Chrome Web Store and start sharing screenshots with technical data - powered by AI."
 mode: "wide"
 sidebarTitle: "Toolbar"
