Documentation edits made through Mintlify web editor

--- a/product/security.mdx
+++ b/product/security.mdx
@@ -5,9 +5,17 @@ description: "We built Toolbar with security at the core. Our platform follows i
 
 ## Compliance and Commitments
 
-- **GDPR: Compliant.** We align our data handling, user rights, and vendor management with the GDPR framework, including data subject rights, lawful bases, and records of processing activities.
-- **SOC 2 Type II: On our roadmap.** We are formalizing controls and evidence collection toward SOC 2 Type II and will share progress updates as milestones are reached.
-- **Data Processing Agreement (DPA):** Available upon request for customers who need contractual assurances aligned to GDPR.
+<Card title="GDPR: Compliant." icon="check" iconType="solid">
+  We align our data handling, user rights, and vendor management with the GDPR framework, including data subject rights, lawful bases, and records of processing activities.
+</Card>
+
+<Card title="SOC 2 Type II: On our roadmap." icon="check" iconType="solid">
+  We are formalizing controls and evidence collection toward SOC 2 Type II and will share progress updates as milestones are reached.
+</Card>
+
+<Card title="Data Processing Agreement (DPA):" icon="check" iconType="solid">
+  Available upon request for customers who need contractual assurances aligned to GDPR.
+</Card>
 
 ## **Data Protection **
 
