Documentation edits made through Mintlify web editor

--- a/product/security.mdx
+++ b/product/security.mdx
@@ -17,7 +17,7 @@ description: "We built Toolbar with security at the core. Our platform follows i
   Available upon request for customers who need contractual assurances aligned to GDPR.
 </Card>
 
-## **Data Protection **
+## Data Protection 
 
 - **Encryption in transit:** All data transmitted between clients and our services is protected by TLS (HTTPS).
 - **Encryption at rest:** Customer data stored by Toolbar is encrypted using strong, modern ciphers.
@@ -54,5 +54,5 @@ description: "We built Toolbar with security at the core. Our platform follows i
 <Accordion title="Contact security" icon="sparkles">
   Reach our security team at your designated support channel or your account representative.
 
-  contact@usetool.bar
+  [contact@usetool.bar](mailto:contact@usetool.bar)
 </Accordion>
