Documentation edits made through Mintlify web editor

--- a/product/replay-feature.mdx
+++ b/product/replay-feature.mdx
@@ -3,11 +3,11 @@ title: "Replay Feature"
 description: "Replay captures an event timeline behind each screenshot so teams can reproduce flows and give developers richer context. It records a privacy‑aware HTML snapshot of the DOM in the background, stored locally with strict security, and only leaves your machine when you choose to share a replay link."
 ---
 
-## **How Replay Works (User Flow) **
+## How Replay Works (User Flow)
 
 1. **Bug appears**\
    You notice an issue during normal use.
-2. **Click Replay **\
+2. **Click Replay**\
    Press the Replay button to open the Replay window.
 3. **Trim & curate**\
    Use start/end handles to select the exact segment, remove noisy steps, and choose overlays (console/network).
@@ -16,7 +16,7 @@ description: "Replay captures an event timeline behind each screenshot so teams 
 5. **Share**\
    Generate a one‑link replay and push to your task manager.
 
-## **What Replay Does **
+## What Replay Does
 
 - **Event Timeline**\
   See the exact sequence of user actions (clicks, navigations, inputs) and UI state changes around the incident.
@@ -27,7 +27,7 @@ description: "Replay captures an event timeline behind each screenshot so teams 
 - **Developer Context**\
   Pair the playback with device/OS, browser/version, viewport, console logs, and network summaries so the fix is clear.
 
-## **Privacy & Security **
+## Privacy & Security 
 
 - **Local‑First Storage**\
   The HTML recording, timeline, and technical context are stored on the user’s computer by default and do not leave the device until a replay link is explicitly shared.
