Documentation edits made through Mintlify web editor

--- a/product/data-captured.mdx
+++ b/product/data-captured.mdx
@@ -38,22 +38,22 @@ description: "When you capture a screenshot, Toolbar bundles the image with tech
   Pixel dimensions of the captured image.\
   Example: 800×450
 
-## Example (as displayed in “Info”) 
+## Example (as displayed in “Info”)
 
-> URL: https://usetool.bar/\\ Timestamp: **August 30, 2025 at 6:22 PM GMT+3**\
+> URL: https://usetool.bar/\\\\ Timestamp: **August 30, 2025 at 6:22 PM GMT+3**\
 > OS: **macOS (arm) 26.0.0**\
 > Browser: **Chromium 139.0.7258.156**\
 > Window Size: **2555×1456**\
-> Country: **Moldova**\
+> Country: 🇲🇩 **Moldova**\
 > Screenshot Size: **259×150**
 
-## Debug Signals 
+## Debug Signals
 
 **Console Logs**
 
 - **What we store**\
   Selected console entries near the incident (error/warn/info), with timestamps.\
-  Example: ERROR at 15:42:12 — TypeError: Cannot read property ‘x’ of undefined
+  Example: ERROR at 15:42:12 - TypeError: Cannot read property ‘x’ of undefined
 - **Why it matters**\
   Speeds JS debugging by surfacing relevant errors without reproducing first.
 
@@ -65,20 +65,20 @@ description: "When you capture a screenshot, Toolbar bundles the image with tech
 - **Why it matters**\
   Helps trace API failures, latency spikes, and resource loading issues.
 
-## User Actions (Steps) 
+## User Actions (Steps)
 
 **Session Steps → Repro**
 
 - **What we store**\
   A concise sequence of recent user actions (clicks, navigations, inputs) converted into readable reproduction steps.\
   Example:
-  1. Click “Add to Cart”
-  2. Navigate to “/checkout”
+  1. Clicked “Add to Cart”
+  2. Navigated to “/checkout”
   3. Submit payment form → error banner appears
 
-## Why These Fields Matter 
+## Why These Fields Matter
 
-1. Faster reproduction: OS, browser, and window size remove guesswork for developers.
-2. Precise traceability: URL and timestamp align reports with releases and observability signals.
-3. Regional diagnostics: Country informs CDN routing, localization, and feature flags.
-4. Visual fidelity: Screenshot size confirms the captured evidence quality.
+1. **Faster reproduction:** OS, browser, and window size remove guesswork for developers.
+2. **Precise traceability: **URL and timestamp align reports with releases and observability signals.
+3. **Regional diagnostics:** Country informs CDN routing, localization, and feature flags.
+4. **Visual fidelity:** Screenshot size confirms the captured evidence quality.
