Documentation edits made through Mintlify web editor

--- a/product/core-features.mdx
+++ b/product/core-features.mdx
@@ -3,28 +3,28 @@ title: "Core Features"
 description: "Toolbar is a single browser extension for bug reporting. Capture screenshots with technical context, share one link, and push a pre‑filled task to your tools."
 ---
 
-## One‑Click Capture 
+### One‑Click Capture 
 
 Create a screenshot with automatic device/OS, browser/version, viewport, console logs, network summary, and session steps.
 
 More details: [Data Captured](/product/data-captured)
 
-## Dev‑Ready Report 
+### Dev‑Ready Report 
 
 Each capture becomes a single shareable link that includes repro steps and context - no manual typing.
 
-## Push to Your Stack 
+### Push to Your Stack 
 
 Send the report to [Jira](/integrations/jira) and [Slack](/integrations/slack) with fields pre‑filled and labels applied.
 
-## Collaboration 
+### Collaboration 
 
 Comment directly on the page, @mention teammates, and see real‑time updates on the shared link.
 
-## **AI Assist**
+### **AI Assist **
 
 AI reads the page and context, proposes fixes, and updates status. You can ask about recorded videos, generate tasks, and create ready-made templates.
 
-## **Loom‑Style Recording**
+### **Loom‑Style Recording **
 
 Record short videos of issues with tasks auto‑generated based on transcription.
