--- a/product/install-extension.mdx
+++ b/product/install-extension.mdx
@@ -23,4 +23,6 @@ Join teams who spare themselves unnecessary explanations and stop leaving devs g
   </Step>
 </Steps>
 
-Now the toolbar will always be visible and easily accessible.
+<Info>
+  Now the toolbar will always be visible and easily accessible.
+</Info>
