--- a/product/security.mdx
+++ b/product/security.mdx
@@ -3,7 +3,7 @@ title: "Security"
 description: "We built Toolbar with security at the core. Our platform follows industry-standard practices for encryption, access control, and secure operations - so your team can stay productive while your data stays protected."
 ---
 
-## Compliance and Commitments
+### Compliance and Commitments 
 
 <Card title="GDPR: Compliant." icon="check" iconType="solid">
   We align our data handling, user rights, and vendor management with the GDPR framework, including data subject rights, lawful bases, and records of processing activities.
@@ -17,21 +17,21 @@ description: "We built Toolbar with security at the core. Our platform follows i
   Available upon request for customers who need contractual assurances aligned to GDPR.
 </Card>
 
-## Data Protection 
+### Data Protection 
 
 - **Encryption in transit:** All data transmitted between clients and our services is protected by TLS (HTTPS).
 - **Encryption at rest:** Customer data stored by Toolbar is encrypted using strong, modern ciphers.
 - **Secrets management:** Application and infrastructure secrets are stored securely and rotated on a defined schedule.
 - **Backups and resilience:** Regular backups and recovery testing ensure continuity and help minimize downtime and data loss.
 
-## **Secure Development**
+### **Secure Development **
 
 - **SDLC:** Security requirements are integrated into design, development, code review, and release processes.
 - **Dependency hygiene:** We scan third-party libraries for known vulnerabilities and update proactively.
 - **Testing:** Automated tests and security checks run in CI to catch regressions early.
 - **Change management:** All production changes are tracked and reviewed before deployment.
 
-## FAQs
+### FAQs 
 
 <Accordion title="Where is my data stored? ">
   Your data is hosted in reputable, tier‑1 cloud regions with strong physical, network, and operational controls. Specific regions and residency options are available upon request.
