--- a/integrations/jira.mdx
+++ b/integrations/jira.mdx
@@ -1,4 +1,23 @@
 ---
 title: "Jira"
-description: "Description of your new file."
+description: "Create dev‑ready Jira issues directly from a replay or screenshot link. We pre‑fill the ticket with steps, signals, and environment context so developers can reproduce and fix fast - no copy‑paste."
 ---
+
+### What It Does 
+
+- **One‑click Ticket:** Convert a link into a Jira issue instantly. /
+- **Pre‑Filled Context:** Summary, Description, Labels, and Attachments populated from the capture.
+- **Auto Repro Steps:** Human‑readable steps plus the exact DOM element target.
+- **Signals in Description:** Console and network highlights aligned to timestamps.
+- **Replay Source of Truth:** Include the replay link and screenshot for deep context.
+
+### Included in the Ticket 
+
+> URL: [https://usetool.bar/](https://usetool.bar/\) \
+> Issue URL: \
+> Timestamp: **August 30, 2025 at 6:22 PM GMT+3**\
+> OS: **macOS (arm) 26.0.0**\
+> Browser: **Chromium 139.0.7258.156**\
+> Window Size: **2555×1456**\
+> Country: 🇲🇩 **Moldova**\
+> Screenshot Size: **259×150**
