Documentation edits made through Mintlify web editor

--- a/integrations/jira.mdx
+++ b/integrations/jira.mdx
@@ -3,7 +3,7 @@ title: "Jira"
 description: "Create dev‑ready Jira issues directly from a replay or screenshot link. We pre‑fill the ticket with steps, signals, and environment context so developers can reproduce and fix fast - no copy‑paste."
 ---
 
-### What It Does 
+### What It Does
 
 - **One‑click Ticket:** Convert a link into a Jira issue instantly. /
 - **Pre‑Filled Context:** Summary, Description, Labels, and Attachments populated from the capture.
@@ -11,10 +11,10 @@ description: "Create dev‑ready Jira issues directly from a replay or screensho
 - **Signals in Description:** Console and network highlights aligned to timestamps.
 - **Replay Source of Truth:** Include the replay link and screenshot for deep context.
 
-### Included in the Ticket 
+### Included in the Ticket
 
-> URL: [https://usetool.bar/](https://usetool.bar/\) \
-> Issue URL: \
+> URL: https://usetool.bar/\
+> Issue URL: https://usetool.bar/\
 > Timestamp: **August 30, 2025 at 6:22 PM GMT+3**\
 > OS: **macOS (arm) 26.0.0**\
 > Browser: **Chromium 139.0.7258.156**\
