Documentation edits made through Mintlify web editor

--- a/integrations/slack.mdx
+++ b/integrations/slack.mdx
@@ -3,16 +3,16 @@ title: "Slack"
 description: "Send replay or screenshot links to Slack as lightweight notifications. Messages deliver at‑a‑glance context and quick actions so teams triage fast."
 ---
 
-### What It Does 
+### What It Does
 
 - **Instant Notifications:** Post to channels or DMs with a concise incident summary.
 - **Context Preview:** Steps, targeted element, and top console/network highlights inline.
-- **Quick Actions: **Buttons to Open Replay and Create Jira Ticket from Slack.
+- **Quick Actions:** Buttons to Open Replay and Create Jira Ticket from Slack.
 
-### Included in the Ticket 
+### Included in the Ticket
 
-> URL: [https://usetool.bar/](https://usetool.bar/\\) \
-> Issue URL: \
+> URL: **Product Link**\
+> Issue URL: **Issue Link**\
 > Timestamp: **August 30, 2025 at 6:22 PM GMT+3**\
 > OS: **macOS (arm) 26.0.0**\
 > Browser: **Chromium 139.0.7258.156**\
