--- a/integrations/jira.mdx
+++ b/integrations/jira.mdx
@@ -13,8 +13,8 @@ description: "Create dev‑ready Jira issues directly from a replay or screensho
 
 ### Included in the Ticket
 
-> URL: https://usetool.bar/\
-> Issue URL: https://usetool.bar/\
+> URL: **Product Link**\
+> Issue URL: **Issue Link**\
 > Timestamp: **August 30, 2025 at 6:22 PM GMT+3**\
 > OS: **macOS (arm) 26.0.0**\
 > Browser: **Chromium 139.0.7258.156**\
