--- a/product/data-captured.mdx
+++ b/product/data-captured.mdx
@@ -38,16 +38,17 @@ description: "When you capture a screenshot, Toolbar bundles the image with tech
   Pixel dimensions of the captured image.\
   Example: 800×450
 
-### Example (as displayed in “Info”) 
+### Example (as displayed in “Info”)
 
-> URL: https://usetool.bar/\\\\\\\\ Timestamp: **August 30, 2025 at 6:22 PM GMT+3**\
+> URL: **Product Link**\
+> Timestamp: **August 30, 2025 at 6:22 PM GMT+3**\
 > OS: **macOS (arm) 26.0.0**\
 > Browser: **Chromium 139.0.7258.156**\
 > Window Size: **2555×1456**\
 > Country: 🇲🇩 **Moldova**\
 > Screenshot Size: **259×150**
 
-### Debug Signals 
+### Debug Signals
 
 **Console Logs**
 
@@ -65,7 +66,7 @@ description: "When you capture a screenshot, Toolbar bundles the image with tech
 - **Why it matters**\
   Helps trace API failures, latency spikes, and resource loading issues.
 
-### User Actions (Steps) 
+### User Actions (Steps)
 
 **Session Steps → Repro**
 
@@ -76,7 +77,7 @@ description: "When you capture a screenshot, Toolbar bundles the image with tech
   2. Navigated to “/checkout”
   3. Submit payment form → error banner appears
 
-### Why These Fields Matter 
+### Why These Fields Matter
 
 1. **Faster reproduction:** OS, browser, and window size remove guesswork for developers.
 2. \*\*Precise traceability: \*\*URL and timestamp align reports with releases and observability signals.
