Documentation edits made through Mintlify web editor

--- a/integrations/jira.mdx
+++ b/integrations/jira.mdx
@@ -3,6 +3,8 @@ title: "Jira"
 description: "Create dev‑ready Jira issues directly from a replay or screenshot link. We pre‑fill the ticket with steps, signals, and environment context so developers can reproduce and fix fast - no copy‑paste."
 ---
 
+![Jira Banner Pn](/images/jira-banner.png)
+
 ### What It Does
 
 - **One‑click Ticket:** Convert a link into a Jira issue instantly. /
