--- a/integrations/slack.mdx
+++ b/integrations/slack.mdx
@@ -3,6 +3,8 @@ title: "Slack"
 description: "Send replay or screenshot links to Slack as lightweight notifications. Messages deliver at‑a‑glance context and quick actions so teams triage fast."
 ---
 
+![Slack Banner Pn](/images/slack-banner.png)
+
 ### What It Does
 
 - **Instant Notifications:** Post to channels or DMs with a concise incident summary.
