Documentation edits made through Mintlify web editor

--- a/product/data-captured.mdx
+++ b/product/data-captured.mdx
@@ -3,7 +3,7 @@ title: "Data Captured"
 description: "When you capture a screenshot, Toolbar bundles the image with technical context to create a single, actionable report. This page lists the fields we attach, why they matter, and the controls available - using examples."
 ---
 
-![1 Pn](/images/1.png)
+![image.png](/images/image.png)
 
 ### **Included Fields**
 
