--- a/product/replay-feature.mdx
+++ b/product/replay-feature.mdx
@@ -3,6 +3,8 @@ title: "Replay Feature"
 description: "Replay captures an event timeline behind each screenshot so teams can reproduce flows and give developers richer context. It records a privacy‑aware HTML snapshot of the DOM in the background, stored locally with strict security, and only leaves your machine when you choose to share a replay link."
 ---
 
+![500 1x Shots So Pn](/images/500_1x_shots_so.png)
+
 ### How Replay Works (User Flow)
 
 1. **Bug appears**\
@@ -36,7 +38,7 @@ description: "Replay captures an event timeline behind each screenshot so teams 
 - **Secure Transport & Access**\
   When shared, replay data is transmitted over encrypted channels and scoped to the recipient workspace with role‑based access.
 
-### FAQs 
+### FAQs
 
 <Accordion title="Why Replay?">
   - **Reproduce flows**\
