--- a/product/replay-feature.mdx
+++ b/product/replay-feature.mdx
@@ -3,7 +3,7 @@ title: "Replay Feature"
 description: "Replay captures an event timeline behind each screenshot so teams can reproduce flows and give developers richer context. It records a privacy‑aware HTML snapshot of the DOM in the background, stored locally with strict security, and only leaves your machine when you choose to share a replay link."
 ---
 
-![500 1x Shots So Pn](/images/500_1x_shots_so.png)
+![Replay Pn](/images/Replay.png)
 
 ### How Replay Works (User Flow)
 
