Documentation edits made through Mintlify web editor

--- a/product/replay-feature.mdx
+++ b/product/replay-feature.mdx
@@ -7,16 +7,23 @@ description: "Replay captures an event timeline behind each screenshot so teams 
 
 ### How Replay Works (User Flow)
 
-1. **Bug appears**\
-   You notice an issue during normal use.
-2. **Click Replay**\
-   Press the Replay button to open the Replay window.
-3. **Trim & curate**\
-   Use start/end handles to select the exact segment, remove noisy steps, and choose overlays (console/network).
-4. **Review & finalize**\
-   Preview the playback, confirm targeted elements, and add optional annotations.
-5. **Share**\
-   Generate a one‑link replay and push to your task manager.
+<Steps>
+  <Step title="Bug appears">
+    You notice an issue during normal use.
+  </Step>
+  <Step title="Click Replay">
+    Press the Replay button to open the Replay window.
+  </Step>
+  <Step title="Trim & curate">
+    Use start/end handles to select the exact segment, remove noisy steps, and choose overlays (console/network).
+  </Step>
+  <Step title="Review & finalize">
+    Preview the playback, confirm targeted elements, and add optional annotations.
+  </Step>
+  <Step title="Share">
+    Generate a one‑link replay and push to your task manager.
+  </Step>
+</Steps>
 
 ### What Replay Does
 
