Documentation edits made through Mintlify web editor

--- a/integrations/jira.mdx
+++ b/integrations/jira.mdx
@@ -7,7 +7,7 @@ description: "Create dev‑ready Jira issues directly from a replay or screensho
 
 ### What It Does
 
-- **One‑click Ticket:** Convert a link into a Jira issue instantly. /
+- **One‑click Ticket:** Convert a link into a Jira issue instantly. 
 - **Pre‑Filled Context:** Summary, Description, Labels, and Attachments populated from the capture.
 - **Auto Repro Steps:** Human‑readable steps plus the exact DOM element target.
 - **Signals in Description:** Console and network highlights aligned to timestamps.
