--- a/product/data-captured.mdx
+++ b/product/data-captured.mdx
@@ -82,6 +82,6 @@ description: "When you capture a screenshot, Toolbar bundles the image with tech
 ### Why These Fields Matter
 
 1. **Faster reproduction:** OS, browser, and window size remove guesswork for developers.
-2. \*\*Precise traceability: \*\*URL and timestamp align reports with releases and observability signals.
+2. **Precise traceability:** URL and timestamp align reports with releases and observability signals.
 3. **Regional diagnostics:** Country informs CDN routing, localization, and feature flags.
 4. **Visual fidelity:** Screenshot size confirms the captured evidence quality.
