Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -14,8 +14,8 @@ Join teams who spare themselves unnecessary explanations and stop leaving devs g
 ## Install Toolbar
 
 <Steps>
-  <Step title="Search Toolbar on the Chrome Web Store" titleSize="h3">
-    Extension Link: [Chrome Web Store — Toolbar ↗](YOUR_CHROME_WEB_STORE_URL).
+  <Step title="Enter Waitlist on our Website" titleSize="h3">
+    Extension Link: [Join Waitlist Here ↗.](https://usetool.bar/waitlist)
   </Step>
   <Step title="Click “Add to Chrome”." titleSize="h3">
     Install easily on all Chromium based browsers.
