Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -15,7 +15,7 @@ Join teams who spare themselves unnecessary explanations and stop leaving devs g
 
 <Steps>
   <Step title="Enter Waitlist on our Website" titleSize="h3">
-    Extension Link: [Join Waitlist Here ↗.](https://usetool.bar/waitlist)
+    Extension Link: [**Chrome Web Store ↗**](https://chromewebstore.google.com/detail/toolbar-bug-reports-with/jjikojjfkjcbjklhldnjdnelfmjjmifg?hl=en-US)
   </Step>
   <Step title="Click “Add to Chrome”." titleSize="h3">
     Install easily on all Chromium based browsers.
