Documentation edits made through Mintlify web editor

--- a/product/install-extension.mdx
+++ b/product/install-extension.mdx
@@ -12,7 +12,7 @@ Join teams who spare themselves unnecessary explanations and stop leaving devs g
 ## Install Toolbar
 
 <Steps>
-  <Step title="Enter Waitlist on our Website" titleSize="h3">
+  <Step title="Install our Browser Extension" titleSize="h3">
     Extension Link: [**Chrome Web Store ↗**](https://chromewebstore.google.com/detail/toolbar-bug-reports-with/jjikojjfkjcbjklhldnjdnelfmjjmifg?hl=en-US)
   </Step>
   <Step title="Click “Add to Chrome”." titleSize="h3">
