Documentation edits made through Mintlify web editor

--- a/product/getting-started/mcp.mdx
+++ b/product/getting-started/mcp.mdx
@@ -1,7 +1,6 @@
 ---
 title: "MCP"
-description: "Toolbar MCP lets AI agents and developer tools load your bug report context directly from Toolbar: screen recordings, screenshots, console logs, network requests, user actions, and AI summaries. 
-Paste a Toolbar link into a supported MCP client (Claude Code, Cursor, VS Code, etc.), and the agent can instantly see what happened instead of asking you to re-explain steps to reproduce."
+description: "Toolbar MCP lets AI agents and developer tools load your bug report context directly from Toolbar: screen recordings, screenshots, console logs, network requests, user actions, and AI summaries.  Paste a Toolbar link into a supported MCP client (Claude Code, Cursor, VS Code, etc.), and the agent can instantly see what happened instead of asking you to re-explain steps to reproduce."
 ---
 
 ## How to get started?  
@@ -20,8 +19,7 @@ If you don’t have one yet, [install the extension](/product/install-extension)
 In your terminal, run:
 
 ```shellscript
-claude mcp add Toolbar
-https://mcp.usetool.bar -t http -s user
+claude mcp add Toolbar https://mcp.usetool.bar/mcp -t http -s user
 ```
 
 ## **How to use it**?
