Documentation edits made through Mintlify web editor

--- a/integrations/linear.mdx
+++ b/integrations/linear.mdx
@@ -3,7 +3,7 @@ title: "Linear"
 description: "Create dev‑ready Linear issues directly from a replay or screenshot link. We pre‑fill the ticket with steps, signals, and environment context so developers can reproduce and fix fast - no copy‑paste."
 ---
 
-![Linear](/images/linear.png)
+![Linear](/image-1.png)
 
 ### What It Does
 
