--- a/integrations/slack.mdx
+++ b/integrations/slack.mdx
@@ -3,7 +3,7 @@ title: "Slack"
 description: "Send replay or screenshot links to Slack as lightweight notifications. Messages deliver at‑a‑glance context and quick actions so teams triage fast."
 ---
 
-![Slack Banner Pn](/images/slack-banner.png)
+![Slack Banner Pn](/image.png)
 
 ### What It Does
 
