Documentation edits made through Mintlify web editor

--- a/product/getting-started/mcp.mdx
+++ b/product/getting-started/mcp.mdx
@@ -16,7 +16,7 @@ If you don’t have one yet, [install the extension](/product/install-extension)
 
 ### **Claude Code** 
 
-In your terminal, run:
+Run this command in your project’s terminal:
 
 ```shellscript
 claude mcp add Toolbar https://mcp.usetool.bar/mcp -t http -s user
