Documentation edits made through Mintlify web editor

--- a/product/getting-started/mcp.mdx
+++ b/product/getting-started/mcp.mdx
@@ -51,7 +51,7 @@ with concrete steps and files/components to touch.
 ## **FAQ**
 
 <AccordionGroup>
-  <Accordion title="Do I need the extension installed?" defaultOpen>
+  <Accordion title="Do I need the extension installed?">
     You only need an existing Toolbar link to use MCP, but the extension is how most people record.
   </Accordion>
   <Accordion title="Can you use multiple links in one prompt?">
