Documentation edits made through Mintlify web editor

--- a/product/getting-started/mcp.mdx
+++ b/product/getting-started/mcp.mdx
@@ -31,6 +31,12 @@ claude mcp add Toolbar https://mcp.usetool.bar/mcp -t http -s user
 
 ## **Prompt examples**
 
+**Paste Toolbar Link:**
+
+```
+<Toolbar Link>
+```
+
 Debug a bug:
 
 ```
